minor changes added

--- a/notesFunction/Notes.html
+++ b/notesFunction/Notes.html
@@ -20,7 +20,7 @@
 	<div id="addNoots">
 	<form id="noteDet">
 		<span>Title: </span><input type="text" class="field" name="tit" value=""><br>
-		<span>Class: </span><select id="classSelect"><option value="None">--Please Select--</option>
+		<span>Class: </span><select id="classSelect"><option value="None">&#60;--None Selected--&#62;</option>
 			</select><br>
 		<span>Remind:</span><input type="checkbox" name="yes"> Yes <br>
 		<span>Date and Time:</span><input type="datetime-local" name="dateTime"><br>
@@ -29,7 +29,7 @@
 	<input type="button" name="post" value="Post" onclick="addNotes()">
 	</form>
 	
-	<div>
+	</div>
 </div>
 
 </body>
