--- a/notesFunction/Notes.html
+++ b/notesFunction/Notes.html
@@ -1,36 +1,73 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Notes</title>
-	<script async type="text/javascript" src="script/noteScript.js"></script>
-	<script async type="text/javascript" src="script/demoPopup.js"></script>
-	<link href="styles/styles.css" rel="stylesheet" type="text/css" />
+    <title>Notes</title>
+    <link rel="stylesheet" type="text/css" href="styles/reset.css">
+    <link rel="stylesheet" type="text/css" href=" styles/style.css ">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+    <script src="script/design.js"></script>
+    <script async type="text/javascript" src="script/noteScript.js"></script>
+    <script async type="text/javascript" src="script/demoPopup.js"></script>
 </head>
+
 <body>
-<div id="mainbody">
-	<div id="disPopUp" class="popUp">
-		<div id="popCont">
-			<span id="close">&times;</span>
-			<span id="remCont"></span>
-		</div>
-	</div>
-	<div id="disNotes">
-		
-	</div>
-	<div id="addNoots">
-	<form id="noteDet">
-		<span>Title: </span><input type="text" class="field" name="tit" value=""><br>
-		<span>Class: </span><select id="classSelect"><option value="None">&#60;--None Selected--&#62;</option>
+    <div id="mySidenav" class="sidenav">
+
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="./notes.html">Notes</a>
+        <a href="./recitationrandomizer.html">Recitation Randomizer</a>
+        <a href="./class.html">Group Randomizer</a>
+        <a href="./class.html">Classes</a>
+
+    </div>
+    <header>
+        <nav>
+            <span onclick="openNav()">&#9776;</span>
+        </nav>
+        <h1>Notes</h1>
+        <button onclick="toggle_visibility('addNoots');" id="showAddNotes">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"viewBox="0 0 16 16" style="enable-background:new 0 0 16 16;" xml:space="preserve"><g><path class="fill" d="M16,8c0,0.5-0.5,1-1,1H9v6c0,0.5-0.5,1-1,1s-1-0.5-1-1V9H1C0.5,9,0,8.5,0,8s0.5-1,1-1h6V1c0-0.5,0.5-1,1-1s1,0.5,1,1v6h6C15.5,7,16,7.5,16,8z"/></g></svg>
+        </button>
+    </header>
+
+    <div id="mainbody">
+        <div class="container">
+            <div id="disPopUp" class="popUp">
+                <div id="popCont">
+                    <span id="close">&times;</span>
+                    <span id="remCont"></span>
+                </div>
+            </div>
+            <div id="addNoots">
+
+                <form id="noteDet">
+                    <span id="titleLabel">Title </span><input type="text" class="field" name="tit" value="" placeholder="Title"><br>
+                    <span id="classLabel">Class: </span><select id="classSelect"><option value="None">--Select Class--</option>
 			</select><br>
-		<span>Remind:</span><input type="checkbox" name="yes"> Yes <br>
-		<span>Date and Time:</span><input type="datetime-local" name="dateTime"><br>
-		<span>Description: </span>
-		<textarea id="tArea" cols="60" rows="7"></textarea><br>
-	<input type="button" name="post" value="Post" onclick="addNotes()">
-	</form>
-	
-	</div>
-</div>
+                    <span id="remindLabel">Remind</span>
+                    <div class="checkboxTwo">
+                        <input type="checkbox" value="1" id="checkboxTwoInput" name="yes" />
+                        <label for="checkboxTwoInput"></label>
+                        
+                    </div>
+                    <span id="dateLabel">When</span><input id="datetime" type="datetime-local" name="dateTime"><br>
+                    <span id="descLabel">Description </span>
+                    <textarea id="tArea" cols="60" rows="7" placeholder="Description"></textarea><br>
+                    <input type="button" name="post" value="Post" onclick="addNotes()">
+                </form>
+
+            </div>
+
+            <div class="container" id="disNotes">
+
+            </div>
+
+
+
+        </div>
+    </div>
 
 </body>
+
 </html>
