notes function input adjustments

--- a/notesFunction/Notes.html
+++ b/notesFunction/Notes.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="mySidenav" class="sidenav">
-
+        <h1>My Virtual Assistant</h1>
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="./notes.html">Notes</a>
         <a href="./recitationrandomizer.html">Recitation Randomizer</a>
@@ -43,7 +43,7 @@
 
                 <form id="noteDet">
                     <span id="titleLabel">Title </span><input type="text" class="field" name="tit" value="" placeholder="Title"><br>
-                    <span id="classLabel">Class: </span><select id="classSelect"><option value="None">--Select Class--</option>
+                    <span id="classLabel">Class: </span><select id="classSelect"><option value="None">Select Class</option>
 			</select><br>
                     <span id="remindLabel">Remind</span>
                     <div class="checkboxTwo">
