--- a/mobile web app/class.html
+++ b/mobile web app/class.html
@@ -5,7 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
 		<script defer type="text/javascript" src="script/classScript.js"></script>	
-		<script src="js/script.js"></script>
+		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+    	<script src="script/design.js"></script>
 	</head>
 
 	<body id="class">
@@ -18,13 +19,20 @@
 		    <a href="./class.html">Classes</a>
 		</div>
 
-		<div id="classtop" class="toppage">
-			
-			<h1><span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span> Classes <div class ="addbutton">
-			<input type="button" class="button" value="Add Class" onclick="hsclass()">
-			</div></h1>
-			
-		</div>
+
+		<header>
+			<div id="classtop" class="toppage">
+				
+				<nav>
+		            <span onclick="openNav()">&#9776;</span>
+		        </nav>
+		        <h1>Classes</h1>
+		        <button onclick="toggle_visibility('insertClass');" id="showAddClass">
+		            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"viewBox="0 0 16 16" style="enable-background:new 0 0 16 16;" xml:space="preserve"><g><path class="fill" d="M16,8c0,0.5-0.5,1-1,1H9v6c0,0.5-0.5,1-1,1s-1-0.5-1-1V9H1C0.5,9,0,8.5,0,8s0.5-1,1-1h6V1c0-0.5,0.5-1,1-1s1,0.5,1,1v6h6C15.5,7,16,7.5,16,8z"/></g></svg>
+		        </button>
+				
+			</div>
+		</header>
 
 		<div id="insertClass" class="menu">
 			<h2>Add Class</h2>
