--- a/mobile web app/recitationrandomizer.html
+++ b/mobile web app/recitationrandomizer.html
@@ -5,19 +5,22 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
 		<script type="text/javascript" src="script/script.js"></script>	
-		<script type="text/javascript" src="js/script.js"></script>
+		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+    	<script src="script/design.js"></script>
 		<script type="text/javascript" src="script/NewJS.js"></script>
 	</head>
 
 	<body id="rrg">
 		<div id="mySidenav" class="sidenav">
-			<h1>Virtual Lesson Plan</h1>
-		    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-		    <a href="./index.html">Home</a>
-		    <a href="./notes.html">Notes</a>
-		    <a href="./recitationrandomizer.html">Group Randomizer</a>
-		    <a href="./class.html">Classes</a>
-		</div>
+	        <h1>My Virtual Assistant</h1>
+	        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+	        <a href="./index.html">Home</a>
+	        <a href="./notes.html">Notes</a>
+	        <a href="./recitationrandomizer.html">Recitation Randomizer</a>
+	        <a href="./class.html">Group Randomizer</a>
+	        <a href="./class.html">Classes</a>
+
+	    </div>
 		<div id="rrgtop" class="toppage">
 			
 			<h1><span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>Group Randomizer</h1>
