added randomizer in ui and some styles in classes

--- a/notesFunction/Notes.html
+++ b/notesFunction/Notes.html
@@ -3,8 +3,9 @@
 
 <head>
     <title>Notes</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="styles/reset.css">
-    <link rel="stylesheet" type="text/css" href=" styles/style.css ">
+    <link rel="stylesheet" type="text/css" href=" styles/style.css " media="screen">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
     <script src="script/design.js"></script>
     <script async type="text/javascript" src="script/noteScript.js"></script>
