--- a/mobile web app/class.html
+++ b/mobile web app/class.html
@@ -4,20 +4,21 @@
 		<title>Class</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
-		<script defer type="text/javascript" src="script/classScript.js"></script>	
+		<script defer type="text/javascript" src="script/script.js"></script>	
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
     	<script src="script/design.js"></script>
 	</head>
 
 	<body id="class">
 		<div id="mySidenav" class="sidenav">
-			<h1>Virtual Lesson Plan</h1>
-		    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-		    <a href="./index.html">Home</a>
-		    <a href="./notes.html">Notes</a>
-		    <a href="./recitationrandomizer.html">Group Randomizer</a>
-		    <a href="./class.html">Classes</a>
-		</div>
+	        <h1>My Virtual Assistant</h1>
+	        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+	        <a href="./index.html">Home</a>
+	        <a href="./notes.html">Notes</a>
+	        <a href="./randomizer.html">Randomizer</a>
+	        <a href="./class.html">Classes</a>
+
+	    </div>
 
 
 		<header>
@@ -65,7 +66,10 @@
 			<div id="seatPlan">
 
 			</div>
-
+			<div class="submitbut">
+			<input type="button" name="tard" value="Mark As Tardy" onclick="markTardy()">
+				<input type="button" name="pres" value="Mark As Absent" onclick="markAbsent()">
+			</div>
 
 		</div>
 
