--- a/mobile web app/index.html
+++ b/mobile web app/index.html
@@ -14,12 +14,10 @@
 	        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 	        <a href="./index.html">Home</a>
 	        <a href="./notes.html">Notes</a>
-	        <a href="./recitationrandomizer.html">Recitation Randomizer</a>
-	        <a href="./class.html">Group Randomizer</a>
+	        <a href="./randomizer.html">Randomizer</a>
 	        <a href="./class.html">Classes</a>
 
 	    </div>
-		
 
 
 		<div id="maintop" class="toppage">
