added popup to all html files, added some ui, added design to listing

--- a/mobile web app/index.html
+++ b/mobile web app/index.html
@@ -9,6 +9,12 @@
 	</head>
 
 	<body id="main">
+		<div id="disPopUp" class="popUp">
+                <div id="popCont">
+                    <span id="close">&times;</span>
+                    <span id="remCont"></span>
+                </div>
+            </div>
 		<div id="mySidenav" class="sidenav">
 	        <h1>My Virtual Assistant</h1>
 	        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -18,6 +24,7 @@
 	        <a href="./class.html">Classes</a>
 
 	    </div>
+		
 
 
 		<div id="maintop" class="toppage">
@@ -36,14 +43,8 @@
 				<div id="three"><li><a href="./class.html"></a></li>Classes</div>
 				
 			</ul> 
-			<h2>Your Classes</h2>
-
-			<ul>
-				<div id="four"><li>IT 324 Websystems and Technologies</li></div>
-				<div id="five"><li>IT 324 Websystems and Technologies</li></div>
-			</ul>
-			
-
+			<h2>Your Classes Today:</h2>
+			kill yourself
 
 			
 		</div>
