added attendance html, note popup

--- a/mobile web app/class.html
+++ b/mobile web app/class.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
 		<script defer type="text/javascript" src="script/fruitSnek.js"></script>	
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+		<script defer type="text/javascript" src="script/demoPopup.js"></script>z`
     	<script src="script/design.js"></script>
 	</head>
 
@@ -23,6 +24,7 @@
 		    <a href="./notes.html">Notes</a>
 		    <a href="./randomizer.html">Randomizer</a>
 		    <a href="./class.html">Classes</a>
+		    <a href="./attendance.html">Attendance</a>
 		</div>
 
 
