--- a/mobile web app/randomizer.html
+++ b/mobile web app/randomizer.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
     	<script defer src="script/design.js"></script>
+    	<script async type="text/javascript" src="script/demoPopup.js"></script>
 		<script defer type="text/javascript" src="script/GroupCreator.js"></script>
 	</head>
 
@@ -17,13 +18,14 @@
                 </div>
             </div>
 		<div id="mySidenav" class="sidenav">
-	        <h1>My Virtual Assistant</h1>
-	        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-	        <a href="./index.html">Home</a>
-	        <a href="./notes.html">Notes</a>
-	        <a href="./randomizer.html">Randomizer</a>
-	        <a href="./class.html">Classes</a>
-	    </div>
+			<h1>Virtual Lesson Plan</h1>
+		    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+		    <a href="./index.html">Home</a>
+		    <a href="./notes.html">Notes</a>
+		    <a href="./randomizer.html">Randomizer</a>
+		    <a href="./class.html">Classes</a>
+		    <a href="./attendance.html">Attendance</a>
+		</div>
 		<header>
 			<div id="rrgtop" class="toppage">
 				
