--- a/mobile web app/notes.html
+++ b/mobile web app/notes.html
@@ -15,14 +15,14 @@
 <body>
     
     <div id="mySidenav" class="sidenav">
-        <h1>My Virtual Assistant</h1>
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="./index.html">Home</a>
-        <a href="./notes.html">Notes</a>
-        <a href="./randomizer.html">Randomizer</a>
-        <a href="./class.html">Classes</a>
-
-    </div>
+            <h1>Virtual Lesson Plan</h1>
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a href="./index.html">Home</a>
+            <a href="./notes.html">Notes</a>
+            <a href="./randomizer.html">Randomizer</a>
+            <a href="./class.html">Classes</a>
+            <a href="./attendance.html">Attendance</a>
+        </div>
     <header>
         <nav>
             <span onclick="openNav()">&#9776;</span>
