added notes to index.html

--- a/mobile web app/index.html
+++ b/mobile web app/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 	<html>
 	<head>
+		<title>Virtual Assistant</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
+		<link rel="stylesheet" type="text/css" href="css/style.css" media="screen">
 		<script defer type="text/javascript" src="script/classScript.js"></script>	
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 		<script defer type="text/javascript" src="script/demoPopup.js"></script>
@@ -34,25 +35,19 @@
 			
 		</div>
 
+		<div id="dispRemNotes">
+		</div>
 
-
-
-
-		<div id="mainmenu" class="menu">
-			<div id="dispRemNotes">
-			</div>
-			<ul>
-				<div id="one"><li><a href="./notes.html">Notes</a></li></div>
-				<div id="two"><li><a href="./recitationrandomizer.html">Group Randomizer</a></li></div>
-				<div id="three"><li><a href="./class.html"></a></li>Classes</div>
-				<div id="four"><li><a href="./attendace.html"></a></li>Attendance</div>
+		<div id="mainmenu" class="menu">	
+				<a href="./notes.html"><div id="one">Notes</div></a>
+				<a href="./recitationrandomizer.html"><div id="two">Group Randomizer</div></a>
+				<a href="./class.html"><div id="three">Classes</div></a>
+				<a href="./attendace.html"><div id="four">Attendance</div></a>
 				
-			</ul> 
 			<h2>Your Classes Today:</h2>
 			<div id="classToday">
 			kill yourself
 			</div>
-
 			
 		</div>
 	</body>
