--- a/mobile web app/randomizer.html
+++ b/mobile web app/randomizer.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Recitation Randomizer</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
+		<link rel="stylesheet" type="text/css" href="css/style.css" media="screen">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
     	<script defer src="script/design.js"></script>
     	<script async type="text/javascript" src="script/demoPopup.js"></script>
