--- a/mobile web app/class.html
+++ b/mobile web app/class.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Class</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
+		<link rel="stylesheet" type="text/css" href="css/style.css" media="screen">
 		<script defer type="text/javascript" src="script/fruitSnek.js"></script>	
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 		<script defer type="text/javascript" src="script/demoPopup.js"></script>z`
