added some media query
im trash why am i the one doing this

--- a/mobile web app/index.html
+++ b/mobile web app/index.html
@@ -35,7 +35,7 @@
 			
 		</div>
 
-		<div id="dispRemNotes">
+		<div id="dispRemNotes" class="menu">
 		</div>
 
 		<div id="mainmenu" class="menu">	
@@ -44,11 +44,13 @@
 				<a href="./class.html"><div id="three">Classes</div></a>
 				<a href="./attendace.html"><div id="four">Attendance</div></a>
 				
-			<h2>Your Classes Today:</h2>
+			
+		</div>
+
+		<h2>Your Classes Today:</h2>
 			<div id="classToday">
 			kill yourself
 			</div>
 			
-		</div>
 	</body>
 </html>
