--- a/mobile responsive - Copy/notes.html
+++ b/mobile responsive - Copy/notes.html
@@ -4,6 +4,7 @@
 <head>
     <title>Notes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8"/>
     <link rel="stylesheet" type="text/css" href="css/reset.css" media="screen">
     <link rel="stylesheet" type="text/css" href=" css/noteStyle.css " media="screen">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
@@ -13,7 +14,7 @@
 </head>
 
 <body>
-    <div id="mySidenav" class="sidenav">
+    <nav id="mySidenav" class="sidenav">
         <h1>My Virtual Assistant</h1>
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a href="./index.html">Home</a>
@@ -21,8 +22,8 @@
             <a href="./randomizer.html">Randomizer</a>
             <a href="./class.html">Classes</a>
             <a href="./attendance.html">Attendance</a>
+    </nav>
 
-    </div>
     <header>
         <nav>
             <span onclick="openNav()">&#9776;</span>
@@ -33,7 +34,7 @@
         </button>
     </header>
 
-    <div id="mainbody">
+    <main id="mainbody">
         <div class="container">
             <div id="disPopUp" class="popUp">
                 <div id="popCont">
@@ -41,35 +42,26 @@
                     <span id="remCont"></span>
                 </div>
             </div>
-            <div id="addNoots">
-
+            <section id="addNoots">
                 <form id="noteDet">
                     <span id="titleLabel">Title </span><input type="text" class="field" name="tit" value="" placeholder="Title"><br>
                     <span id="classLabel">Class: </span><select id="classSelect"><option value="None">Select Class</option>
-			</select><br>
+			         </select><br>
                     <span id="remindLabel">Remind</span>
                     <div class="checkboxTwo">
                         <input type="checkbox" value="1" id="checkboxTwoInput" name="yes" />
                         <label for="checkboxTwoInput"></label>
-
                     </div>
                     <span id="dateLabel">When</span><input id="datetime" type="datetime-local" name="dateTime"><br>
                     <span id="descLabel">Description </span>
                     <textarea id="tArea" cols="60" rows="7" placeholder="Description"></textarea><br>
                     <input type="button" name="post" value="Post" onclick="addNotes()">
                 </form>
-
-            </div>
-
+            </section>
             <div class="container" id="disNotes">
-
             </div>
-
-
-
         </div>
-    </div>
-
+    </main>
 </body>
 
 </html>
