Minor fixes for the landing page.
Mada mada. It's 90% done. Measure Twice Cut Once.

--- a/mobile responsive - Copy/class.html
+++ b/mobile responsive - Copy/class.html
@@ -59,7 +59,8 @@
 			<section id="classDetails" class="menu">  
 				<div id="classTitle"></div>
 				<div></div>
-
+				<div id="classDets">
+				</div>
 				<div id="seatPlan"></div>
 				<div class="submitbut">
 					<input type="button" name="tard" value="Mark As Tardy" onclick="markTardy()">
